feat(exhibition)：修复气泡文字深度闪烁与编辑界面鼠标状态。